--- a/trucos-tecnicos/hacking/styles_hacking.css
+++ b/trucos-tecnicos/hacking/styles_hacking.css
@@ -3,8 +3,7 @@
 body {
     font-family: 'Share Tech Mono', monospace;
     background: linear-gradient(120deg, #050505, #0f0f0f, #1b1b1b);
-    color: #33ff33;
-    text-align: center;
+    color: #ccc;
     margin: 0;
     padding: 0;
 }
@@ -95,13 +94,14 @@ p {
 .codigo {
     background: #111;
     padding: 15px;
-    color: #33ff33;
+    color: #ccc;
     font-family: monospace;
     border-radius: 8px;
     overflow-x: auto;
     max-width: 90%;
     margin: auto;
     border-left: 5px solid #ffcc00;
+    text-align: left;
 }
 
 /* Descripción */
